# DidaBot

./: .env.example  .gitignore  CODE_REVIEW_REPORT.md  Dockerfile  FIX_HISTORY_ISSUE.md  GLM_TASKS.md  NETWORK_OPTIMIZATION.md  README.md  TESTING_GUIDE.md  ai.md  ai_assistant_alert.md  api_website.md  didaAPI.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sub_task.md  test_network.sh  解决方案设计.md  问题.md
.claude/: settings.local.json
docs/: ai-form-proposal.md
docs/API/: authentication.md  examples.md  pomodoro.md  projects.md  subtasks.md  tasks.md
docs/design/: implementation_checklist.md  memory_system_design.md  subtask_data_flow.md  subtask_implementation_plan.md  subtask_quick_reference.md
kosong/src/kosong/contrib/chat_provider/: anthropic.py  openai_legacy.py
kosong/src/kosong/tooling/: simple.py
src/: ai_assistant.py  bot.py  config.py  dida_client.py
src/context/: conversation_context.py
src/core/: pomodoro_urls.py
src/formatter/: __init__.py  pomodoro_formatter.py  tool_formatter.py
src/handlers/: pomodoro_handlers.py  project_handlers.py  task_handlers.py  task_pomodoro_handlers.py
src/loop/: agent_loop.py
src/models/: pomodoro_models.py
src/prompts/: __init__.py  system.py
src/services/: pomodoro_service.py
src/tools/: dida_tools.py
src/utils/: formatter.py  id_utils.py  time_utils.py
